<resources>
    <string name="app_name">faa</string>
    <string name="title_home">Home</string>
    <string name="title_contracts">Contracts</string>
    <string name="title_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="create_new_account">Create new account</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="create_account">Create account</string>
    <string name="guest">Guest</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="reset_password">Reset password</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="dialog_btn_cancel">CLOSE</string>
    <string name="dialog_btn_ok">OK</string>
    <string name="full_name_hint">Full name</string>
    <string name="email_hint">Email</string>
    <string name="tap_to_choose_your_dob">Tap to choose your DOB</string>
    <string name="dob">Date of birth</string>
    <string name="set_your_dob">Set your DOB</string>
    <string name="country">Country</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="body_type">Body type</string>
    <string name="hair_color">Hair color</string>
    <string name="eye_color">Eye color</string>
    <string name="skills">Skills</string>
    <string name="profile_edit_error">Unable to edit profile in Guest mode\nPlease, log in or sign up</string>
    <string name="filter_all"><u>All</u></string>
    <string name="filter_jobs"><u>Jobs</u></string>
    <string name="filter_news"><u>News</u></string>
    <string name="filter_articles"><u>Articles</u></string>
    <string name="currency_symbol">¥</string>
    <string name="text">Требуется играть недоразвитого дебила соседа, который будет  периодически встречаться на лестнице и входить-выходить из двери.  В некоторых сериях заходить за чем-нибудь.  Требование к притендентам: Убедительно играть дебилов!</string>
    <string name="country_label">Country</string>
    <string name="respond">Respond</string>

    <string-array name="options">
        <item>Unselected</item>
        <item>First option</item>
        <item>Second option</item>
        <item>Third option</item>
    </string-array>

    <string-array name="hair_color_options">
        <item>Unselected</item>
        <item>Black</item>
        <item>Blonde</item>
        <item>Red</item>
        <item>Hasel</item>
        <item>Silver/Grey</item>
        <item>Bald</item>
    </string-array>

    <string-array name="eye_color_options">
        <item>Unselected</item>
        <item>Dark</item>
        <item>Hasel</item>
        <item>Green</item>
        <item>Gray</item>
        <item>Blue</item>
    </string-array>

    <string-array name="body_type_options">
        <item>Unselected</item>
        <item>Regular</item>
        <item>Slim</item>
        <item>Hefty</item>
        <item>Athletic</item>
        <item>Muscular</item>
    </string-array>

    <string-array name="skills_options">
        <item>Dancing</item>
        <item>Music skills</item>
        <item>Singing</item>
        <item>Acrobatics</item>
        <item>Material arts</item>
        <item>Mimicking</item>
        <item>Horseback</item>
        <item>Riding</item>
        <item>Skating/rollerblading/BMX</item>
    </string-array>

</resources>